# edgar-events-python

./: LICENSE  README.md  pyproject.toml
edgar_events/: __init__.py  client.py
